# v86-wasi

./: .gitignore  Cargo.toml  Makefile  README  README.md  boot.json  download.sh  run.sh  svr_applet.go
.github/: dependabot.yml
.github/workflows/: build.yml  runtime_release_linux.yml  runtime_release_mac.yml  runtime_release_win.yml  wasi-v86-linux.yml  wasi-v86-macos.yml  wasi-v86-win.yml  wasm-v86.yml
arch/: blockless.iso
crates/tuntap/: Cargo.toml
crates/tuntap/examples/: tapopen.rs
crates/tuntap/src/: address.rs  configuration.rs  dev.rs  error.rs  event.rs  interest.rs  lib.rs  poll.rs  poller.rs  token.rs
crates/tuntap/src/async/: async_dev.rs  executor.rs  mod.rs  reactor.rs
crates/tuntap/src/async/executor/: local_executor.rs
crates/tuntap/src/platform/: macros.rs  mod.rs
crates/tuntap/src/platform/linux/: dev.rs  epoll.rs  event.rs  mod.rs  sys.rs
crates/tuntap/src/platform/macos/: dev.rs  event.rs  mod.rs  select.rs  sys.rs
crates/tuntap/src/platform/posix/: address.rs  fd.rs  mod.rs  select.rs  selector.rs
crates/tuntap/src/platform/windows/: dev.rs  event.rs  event_poll.rs  fake_poll.rs  fd.rs  ffi.rs  mod.rs  netsh.rs
crates/v86/: Cargo.toml
crates/v86-dll/: Cargo.toml
crates/v86-lib/: Cargo.toml
crates/v86-lib/src/: lib.rs
crates/v86-wasi-dll/: Cargo.toml
crates/v86-wasi-dll/src/: lib.rs
crates/v86/src/: analysis.rs  codegen.rs  config.rs  control_flow.rs  cpu_context.rs  jit.rs  jit_instructions.rs  leb.rs  modrm.rs  opstats.rs  page.rs  profiler.rs  softfloat.rs  state_flags.rs  zstd.rs
crates/v86/src/cpu/: arith.rs  call_indirect.rs  cpu.rs  fpu.rs  instructions.rs  instructions_0f.rs  memory.rs  misc_instr.rs  modrm.rs  pic.rs  sse_instr.rs  string.rs
crates/v86/src/wasmgen/: wasm_builder.rs
crates/wasi/: Cargo.toml
crates/wasi/src/: adapter.rs  bus.rs  consts.rs  cpu.rs  debug.rs  dev.rs  dma.rs  emulator.rs  filesystem.rs  floppy.rs  ide.rs  io.rs  jit.rs  kernel.rs  lib.rs  log.rs  main.rs  mem.rs  ne2k.rs  pci.rs  pic.rs  pit.rs  ps2.rs  rtc.rs  run.rs  screen.rs  setting.rs  storage.rs  terminal.rs  timewheel.rs  tun_thr.rs  uart.rs  utils.rs  vga.rs  virtio.rs  virtio9p.rs  ws_thr.rs
crates/wasi/src/adapter/: net_adapter.rs  net_term_adapter.rs
crates/wasi/src/nat/: linux.rs  macos.rs  macros.rs  mod.rs
term/: bus.js  screen.js  term.css  term.html  term_ws.js
