
[workspace]
resolver = "2"
members = [
    "crates/wasi",
    "crates/v86",
    "crates/v86-lib",
    "crates/tuntap",
]
default-members = ["crates/wasi"]

[workspace.dependencies]
v86-wasi = {path = "crates/wasi", version = "0.1.0"}
tuntap = {path = "crates/tuntap", version = "0.1.0"}
json = "0.12"

[workspace.package]
version = "0.1.0"
authors = ["Join.Gong<joinhack@gmail.com>", "Derek Anderson<derek@txlabs.org>"]
edition = "2021"

[profile.dev]
#lto = false
#opt-level = 2
panic = "abort"
overflow-checks = false

[profile.release]
lto = true
opt-level = 3
incremental = false
panic = "abort"
