
[workspace]
resolver = "2"
members = [
    "crates/wasi",
    "crates/v86",
    "crates/v86-lib",
    "crates/tuntap",
]
default-members = ["crates/wasi"]


[workspace.dependencies]
v86-wasi = {path = "crates/wasi", version = "0.0.2"}
tuntap = {path = "crates/tuntap", version = "0.0.2"}
json = "0.12"
mio = "0.8.11"
tokio = "1"
futures-util = "0.3"
crossbeam-channel = "0.5.6"
anyhow = "1.0.70"
lazy_static = "1.4.0"
rand = "0.8"
chrono = "0.4"

[workspace.package]
version = "0.0.2"
authors = ["Join.Gong<joinhack@gmail.com>", "Derek Anderson<derek@txlabs.org>"]
edition = "2021"

[profile.dev]
#lto = false
#opt-level = 2
panic = "abort"
overflow-checks = false

[profile.release]
lto = true
opt-level = 3
incremental = false
panic = "abort"
