[package]
name = "v86-dll"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Join.Gong<joinhack@gmail.com>", "Derek Anderson<derek@txlabs.org>"]
description = "This crate is the v86 emulator export dynamic lib."
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/v86-wasi"

[dependencies]
v86-wasi = {workspace = true}

[lib]
crate-type = ["cdylib"]