[package]
name = "v86-wasi-dll"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Join.Gong<joinhack@gmail.com>", "Derek Anderson<derek@txlabs.org>"]
description = "This crate is the ipfs car file reader writer and utils."
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/car-utils"

[dependencies]
v86-wasi = {workspace = true}

[lib]
crate-type = ["cdylib"]