[package]
name = "v86-wasi"
version.workspace = true
authors.workspace = true
categories = ["x86", "emulator"]
readme = "README.md"
edition.workspace = true
description = "This crate is the v86 emulator with the wasi."
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/v86-wasi"

[dependencies]
wasmtime = "19.0.0"
lazy_static = "1.4.0"
chrono = "0.4"
rand = "0.8"
tokio = {version = "1", features = ["rt", "net", "time", "io-util", "sync"]}
tokio-tungstenite = "0.17.2"
futures-util = "0.3"
json = {workspace = true}
crossbeam-channel = "0.5.6"
tuntap = {workspace = true, optional = true}
anyhow = "1.0.70"


[features]
default = []
tap = ["tuntap"]