[package]
name = "v86-wasi"
version.workspace = true
authors.workspace = true
categories = ["x86", "emulator"]
readme = "README.md"
edition.workspace = true
description = "This crate is the v86 emulator with the wasi."
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/v86-wasi"

[dependencies]
wasmtime = "21.0.0"
lazy_static = {workspace = true}
chrono = {workspace = true}
rand = {workspace = true}
tokio = {workspace = true, features = ["rt", "net", "time", "io-util", "sync"]}
tokio-tungstenite = "0.17.2"
futures-util = {workspace = true}
json = {workspace = true}
crossbeam-channel = {workspace = true}
tuntap = {workspace = true, optional = true}
anyhow = {workspace = true}



[features]
default = []
tap = ["tuntap"]

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tuntap = {workspace = true}
